@@ -717,6 +717,18 @@ void jshFlashErasePage(
   spi_flash_erase_sector(addr >> FLASH_PAGE_SHIFT);
 }
 
+size_t jshFlashGetMemMapAddress(size_t ptr) {
+  // if ptr is high already, assume we know what we're accessing
+  if (ptr > 0x10000000) return ptr;
+  // romdata_jscode is memory mapped address from the js_code partition in rom - targets/esp32/main.c
+  extern char* romdata_jscode;
+  if (romdata_jscode==0) {
+    jsError("Couldn't find js_code partition - update with partition_espruino.bin\n");
+    return 0;
+  }
+  return &romdata_jscode[ptr];
+}
+
 unsigned int jshSetSystemClock(JsVar *options) {
   UNUSED(options);
   jsError(">> jshSetSystemClock Not implemented");
